fix features section on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3771,3 +3771,8 @@ div.radio input {
   text-align: center;
   display: none;
 }
+
+.features-icon-text {
+  text-align: center !important;
+  padding-bottom: 10px !important;
+}
